@@ -10,6 +10,7 @@
 - fixed string slug method
 - fixed an issue with generating file names when merging files directly in the view engine
 - fixed handling of case-sensitive file names
+- fixed unexpected errors with the stream when handling static files
 
 ========================
 0.0.14
